# LuKA

./: .gitignore  README.md  pyproject.toml
artifacts/hugging_face_wikipedia/: luka_evaluator.py  requirements.txt  wikisalad_dataset_creator.py  wikisalad_eval_example.json
artifacts/prompts/: paragraphs_2.md  paragraphs_3.md  paragraphs_4.md  prompt_loader.py
configs/: lined_layers_all.json
evaluation/: COMPARISON_GUIDE.md  QUICKSTART.md  README.md  __init__.py  compare_results.py  create_mock_comparison.py  eval_easy_lined_20251213_213024.json  evaluate_luka.py  evaluate_luka_gerry.py  evaluator.py  example_usage.py  luka_eval.py  metrics.py  model_implementations.py  model_interface.py  run_eval.py  run_evaluation.py  run_luka_eval.py  score_results.py  simple_qa_evaluator.py  test_lined_questions.py  utils.py
experiments/: README_eval.md  comprehensive_eval.py  eval_baseline.py  eval_lined.py  eval_mixed.py  eval_topdown.py  generate_better_plots.py
exploration/: profile_attention_scores.py
exploration_scripts/: profile_attention_scores.py  rules.py
modeling/: checkpoint.py  compressor.py  kv_cache.py  kv_cache_new.py  refinement.py  segmenter.py  segmenter_new.py
scripts/: check_data_lengths.py  run.py  run_all_evals.sh  run_and_profile.py  run_batch.py  run_batch_mixed.py  run_batch_mixed_old.py  test.py  test_batch.py  test_batch_new.py  train_compressor.py  train_compressor_layers.py
tests/: test_batch.py  test_kv_cache_parity.py  test_segmenter.py
training/: __init__.py  capture.py  config.py  data.py  losses.py  run.py  sampler.py  trainer.py
(+34 files in other folders)
